--- a/templates/trade_notification.html
+++ b/templates/trade_notification.html
@@ -3,8 +3,8 @@
     <title>MoneyBall.AI</title>
 </head>
 <td style="padding: 55px 70px;">
-    <p style="padding-bottom: 0px; margin: 0;font-size: 31px;font-weight:700">Hi {{ name }},</p>
-    <p style="padding-bottom: 20px; margin: 0;font-size: 14px;font-weight:400">{{ message }}</p><br>
-    <p>Thanks & Regards</p>
-    <p>MoneyBall.AI Team</p>
+    <p style="padding-bottom: 0px; margin: 0;font-size: 14px;font-weight:400">Hi {{ name }},</p>
+    <p style="padding-bottom: 20px; margin: 0;font-size: 13px;font-weight:500">{{ message }}</p><br>
+    <p>Thanks & Regards/nMoneyBall.AI Team</p>
+    <p>For more information please login in to your AngelOne account.</p>
 </td>
