--- a/templates/trade_notification.html
+++ b/templates/trade_notification.html
@@ -2,9 +2,9 @@
     <meta charset="UTF-8">
     <title>MoneyBall.AI</title>
 </head>
-<td style="padding: 55px 70px;">
-    <p style="padding-bottom: 0px; margin: 0;font-size: 14px;font-weight:400">Hi {{ name }},</p>
-    <p style="padding-bottom: 20px; margin: 0;font-size: 13px;font-weight:500">{{ message }}</p><br>
-    <p>Thanks & Regards/nMoneyBall.AI Team</p>
-    <p>For more information please login in to your AngelOne account.</p>
+<td>
+    <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
+    <p style="padding-bottom: 10px;padding-left: 5px;font-size: 18px">{{ message }}</p><br>
+    <p style="font-size: 16px">Thanks & Regards/nMoneyBall.AI Team</p>
+    <p style="font-size: 16px">For more information please login in to your AngelOne account.</p>
 </td>
