Exit Action Fix, Email Fix

--- a/templates/trade_notification.html
+++ b/templates/trade_notification.html
@@ -4,7 +4,7 @@
 </head>
 <td>
     <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
-    <p style="padding-bottom: 10px;padding-left: 5px;font-size: 18px">{{ message }}</p><br>
+    <p style="padding-bottom: 10px;font-size: 18px">{{ message }}</p><br>
     <p style="font-size: 16px">Thanks & Regards/nMoneyBall.AI Team</p>
     <p style="font-size: 16px">For more information please login in to your AngelOne account.</p>
 </td>
