--- a/templates/order_failed.html
+++ b/templates/order_failed.html
@@ -4,11 +4,11 @@
 </head>
 <td>
     <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
-    <p style="padding-bottom: 10px;font-size: 18px">Order Failed for <strong>{{ symbol }}</strong></p><br>
-    <p style="padding-bottom: 10px;font-size: 18px">Buy: {{ price }}</p><br>
-    <p style="padding-bottom: 10px;font-size: 18px">Target: <span style="color: #33ff00;font-size: 18px">{{ target }}</span></p><br>
-    <p style="padding-bottom: 10px;font-size: 18px">Stoploss: <span style="color: #ff0000;font-size: 18px">{{ stoploss }}</span></p><br>
+    <p style="padding-bottom: 0px;font-size: 18px">Order Failed for <strong>{{ symbol }}</strong></p><br>
+    <p style="padding-bottom: 0px;font-size: 18px">Buy: {{ price }}</p><br>
+    <p style="padding-bottom: 0px;font-size: 18px">Target: <span style="color: #33ff00;font-size: 18px">{{ target }}</span></p><br>
+    <p style="padding-bottom: 0px;font-size: 18px">Stoploss: <span style="color: #ff0000;font-size: 18px">{{ stoploss }}</span></p><br>
     <p style="padding-bottom: 10px;font-size: 18px">Order-ID: {{ order_id }}</p><br>
-    <p style="font-size: 16px">Thanks & Regards<br>MoneyBall.AI Team</p>
+    <p style="padding-bottom: 0px;font-size: 16px">Thanks & Regards<br>MoneyBall.AI Team</p>
     <p style="padding-bottom: 0px;font-size: 16px">For more information please login in to your AngelOne account.</p>
 </td>
