--- a/templates/tr_sl_hit.html
+++ b/templates/tr_sl_hit.html
@@ -4,9 +4,9 @@
 </head>
 <td>
     <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
-    <p style="padding-bottom: 0px;font-size: 18px">Exit caused by momentum loss for <strong>{{ symbol }}</strong> at price <strong>{{ price }}</strong>.</p><br>
-    <p style="padding-bottom: 0px;font-size: 18px"> Booked Profit/Loss of: <span style="color: #00fbff;font-size: 18px">{{ profit }} %</span></p><br>
-    <p style="padding-bottom: 10px;font-size: 18px">Order-ID: {{ order_id }}</p><br>
+    <p style="padding-bottom: 0px;font-size: 18px">Exit caused by momentum loss for <strong>{{ symbol }}</strong> at price <strong>{{ price }}</strong>.</p>
+    <p style="padding-bottom: 0px;font-size: 18px"> Booked Profit/Loss of: <span style="color: #00fbff;font-size: 18px">{{ profit }} %</span></p>
+    <p style="padding-bottom: 10px;font-size: 18px">Order-ID: {{ order_id }}</p>
     <p style="padding-bottom: 0px;font-size: 16px">Thanks & Regards<br>MoneyBall.AI Team</p>
     <p style="padding-bottom: 0px;font-size: 16px">For more information please login in to your AngelOne account.</p>
 </td>
