--- a/templates/target_hit.html
+++ b/templates/target_hit.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <title>MoneyBall.AI</title>
 </head>
-<td>
+<td style="background-color: #c1b5b5;">
     <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
     <p style="padding-bottom: 0px;font-size: 18px">Target hitted successfully for <strong>{{ symbol }}</strong> at price <strong>{{ price }}</strong>.<br>Booked Profit of: <span style="color: #33ff00;font-size: 18px">{{ profit }} %</span><br>Order-ID: {{ order_id }}</p>
     <p style="padding-bottom: 0px;font-size: 16px">Thanks & Regards<br>MoneyBall.AI Team</p>
