--- a/templates/trade_notification.html
+++ b/templates/trade_notification.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <title>MoneyBall.AI</title>
 </head>
-<td>
+<td style="background-color: #c1b5b5;">
     <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
     <p style="padding-bottom: 10px;font-size: 18px">{{ message }}</p><br>
     <p style="font-size: 16px">Thanks & Regards<br>MoneyBall.AI Team</p>
