--- a/templates/target_hit.html
+++ b/templates/target_hit.html
@@ -4,7 +4,7 @@
 </head>
 <td>
     <p style="padding-bottom: 10px;font-size: 20px">Hi {{ name }},</p>
-    <p style="padding-bottom: 0px;font-size: 18px">Target hitted successfully for <strong>{{ symbol }}</strong> at price <strong>{{ price }}</strong>.<br>Booked Profit of: <span style="color: #33ff00;font-size: 18px">{{ profit }} %</span><br>Order-ID: {{ order_id }}</p>
+    <p style="padding-bottom: 0px;font-size: 18px">Target hitted successfully for <strong>{{ symbol }}</strong> at price <strong>{{ price }}</strong>.<br>Booked Profit of: <span style="color: #007400;font-size: 18px">{{ profit }} %</span><br>Order-ID: {{ order_id }}</p>
     <p style="padding-bottom: 0px;font-size: 16px">Thanks & Regards<br>MoneyBall.AI Team</p>
     <p style="padding-bottom: 0px;font-size: 16px">For more information please login in to your AngelOne account.</p>
 </td>
